--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,7 @@ $dark_grayish_red: hsl(0, 6%, 24%);
 $gradient1: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
 $gradient2: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 
+// mobile first view
 
 body {
     font-family: 'Josefin Sans', sans-serif;
@@ -114,7 +115,7 @@ main {
 
 
 
-//mobile
+//desktop view
 
 @media screen and (min-width: 600px) {
     body {
@@ -178,13 +179,8 @@ main {
     }
 
 
-    #validity {
-        display: none;
-        color: red;
-    }
 
-
-
+//this selector is for the desktop image
     .right {
         display: block;
         
